# raggedy

./: README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/scripts/: apply_solution.py  pick_task.sh  run_agent.py
.github/workflows/: ai_dev.yml  init.yml
