[tool.poetry]
name = "rag-app"
version = "0.1.0"
description = "RAG Application"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
streamlit = ">=1.35.0"
langchain = "*"
langchain-openai = "*"
langchain-community = "*"
faiss-cpu = "*"
tiktoken = "*"
PyGithub = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
