[project]
name = "rag-app"
version = "0.1.0"
description = "RAG App"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "faiss-cpu",
    "tiktoken",
    "PyGithub",
]

# We use hatchling because it supports 'packages = []' which is the standard
# way to do "package-mode = false" in the modern ecosystem.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
