[project]
name = "rag-app"
version = "0.1.0"
description = "RAG Application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai",
    "langchain-community",
    "faiss-cpu",
    "tiktoken",
    "PyGithub",
]
